Fixed Anchor styling to grow plain icon on hover to align with Button.

--- a/src/scss/grommet-core/_objects.anchor.scss
+++ b/src/scss/grommet-core/_objects.anchor.scss
@@ -52,6 +52,7 @@
   &:hover {
     .#{$grommet-namespace}control-icon {
       @include icon-color($active-icon-color);
+      @include icon-hover-grow();
     }
   }
 
